--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
-AC_INIT(octetos-coreutils, 0.7.0-alpha,azael.devel@gmail.com)
+AC_INIT(octetos-coreutils, 0.8.0-alpha,azael.devel@gmail.com)
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([1.11])
 AM_SILENT_RULES([yes])
@@ -15,12 +15,12 @@ AC_PROG_CXX
 dnl ***************************************************************************
 dnl Internationalization
 dnl ***************************************************************************
-IT_PROG_INTLTOOL([0.35.0])
+#IT_PROG_INTLTOOL([0.35.0])
 
-GETTEXT_PACKAGE=octetos-coreutils
-AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
-AM_GLIB_GNU_GETTEXT
+#GETTEXT_PACKAGE=octetos-coreutils
+#AC_SUBST(GETTEXT_PACKAGE)
+#AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
+#AM_GLIB_GNU_GETTEXT
 
 
 
@@ -50,6 +50,8 @@ AM_CONDITIONAL(NATIVE_WIN32, test x"$native_win32" = "xyes")
 LT_INIT([win32-dll])
 
 
+PKG_CHECK_MODULES([CHECK], [check])
+
 PKG_CHECK_MODULES(CUNIT, [cunit ])
 
 PKG_CHECK_MODULES(OCTETOS_CORE, [octetos-core])
@@ -59,4 +61,5 @@ AC_OUTPUT([
 Makefile
 src/octetos-coreutils.pc
 src/Makefile
+tests/Makefile
 po/Makefile.in])
