--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
-AC_INIT(octetos-coreutils, 0.8.0-alpha,azael.devel@gmail.com)
+AC_INIT(octetos-coreutils, 0.8.1-alpha,azael.devel@gmail.com)
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([1.11])
 AM_SILENT_RULES([yes])
@@ -61,5 +61,4 @@ AC_OUTPUT([
 Makefile
 src/octetos-coreutils.pc
 src/Makefile
-tests/Makefile
-po/Makefile.in])
+tests/Makefile])
