--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,10 +1,17 @@
 
+AM_CPPFLAGS = \
+	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
+	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
+	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
+	$(OCTETOS_COREUTILS_CFLAGS)
+
+AM_CFLAGS =\
+	 -Wall\
+	 -g
 
 check_PROGRAMS = v0
 TESTS= $(check_PROGRAMS)
 
 v0_SOURCES = v0.cc
-v0_CFLAGS = $(CFLAGS) @CHECK_CFLAGS@ -I$(top_srcdir)/src
-v0_CXXFLAGS = $(CXXFLAGS) @CHECK_CFLAGS@ -I$(top_srcdir)/src
-v0_CPPFLAGS = $(CPPFLAGS) @CHECK_CFLAGS@ -I$(top_srcdir)/src
-v0_LDADD = $(LDFLAGS) @CHECK_LIBS@ $(top_buildir)/liboctetos-coreutils.la
+v0_CPPFLAGS = $(CUNIT_CFLAGS) -I$(top_srcdir)/src
+v0_LDADD = $(LDFLAGS) $(CUNIT_LIBS) ../src/liboctetos-coreutils.la
