--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,7 +14,7 @@ lib_LTLIBRARIES = liboctetos-coreutils.la
 
 SOURCES = shell.cc ls.cc cd.cc mkdir.cc rm.cc touch.cc rename.cc exists.cc
 
-liboctetos_coreutils_la_LDFLAGS = 
+liboctetos_coreutils_la_LDFLAGS = -static
 liboctetos_coreutils_la_CPPFLAGS =  $(OCTETOS_CORE_CFLAGS)
 liboctetos_coreutils_la_LIBADD = $(OCTETOS_CORE_LIBS)
 liboctetos_coreutils_la_SOURCES = $(SOURCES)
