--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .anjuta/
 .anjuta_sym_db.db
+*.anjuta
 Debug/
 aclocal.m4
 autom4te.cache/
@@ -23,3 +24,4 @@ Makefile.in
 src/Makefile.in
 *.depend
 *.layout
+test-driver
